--- a/O.Bank _ Просто скачай Банк!_files/banner.css
+++ b/O.Bank _ Просто скачай Банк!_files/banner.css
@@ -107,7 +107,6 @@
 
 .banner-descr-wrap {
   display: flex;
-  border-bottom: 5px dotted #ffff;
   padding-bottom: 30px;
 }
 
@@ -159,12 +158,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 330px;
+  border-top: 5px dotted #ffff;
 }
 
 @media (max-width: 1023px) {
   .banner-prostoskachaybank {
     padding-top: 30px;
     border-bottom: 5px dotted #f8785e;
+    max-width: 100%;
   }
 }
 
@@ -187,7 +189,7 @@
 .banner-prostoskachaybank-img {
   margin-bottom: 42px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   width: 100%;
 }
 
